--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,3 +2,5 @@
   rel="stylesheet"
   href="http://localhost:3000/assets/dist/css/site.css"
 >
+
+<script src="http://localhost:3000/assets/dist/js/site.js" ></script>
